@@ -29,9 +29,7 @@ dependencies {
 
     // HTTP
     implementation("io.ktor:ktor-client-core:$ktorVersion")
-    //implementation("io.ktor:ktor-client-cio:$ktorVersion")
-    implementation("io.ktor:ktor-client-java:$ktorVersion")
-
+    implementation("io.ktor:ktor-client-cio:$ktorVersion")
 
     // GUI
     implementation(compose.desktop.currentOs)
@@ -41,6 +39,9 @@ dependencies {
 }
 
 tasks {
+
+    compileKotlin.get().destinationDirectory.set(compileJava.get().destinationDirectory.get())
+    compileTestKotlin.get().destinationDirectory.set(compileTestJava.get().destinationDirectory.get())
 
     val javaVersionCompat = JavaVersion.VERSION_16.toString()
     val javaVersion = JavaVersion.VERSION_17.toString()
@@ -52,6 +53,7 @@ tasks {
     }
 
     withType<JavaCompile> {
+        modularity.inferModulePath.set(true)
         sourceCompatibility = javaVersion
         targetCompatibility = javaVersion
     }
@@ -69,6 +71,9 @@ testing {
 
 compose.desktop {
     application {
+        jvmArgs("--add-modules=jdk.incubator.foreign", "--enable-native-access=PoderTech.overlay", "--enable-native-access=ALL-UNNAMED")
         mainClass = "dev.twelveoclock.liquidoverlay.MainKt"
+        nativeDistributions.includeAllModules = true
+        javaHome = System.getenv("JAVA_HOME")
     }
 }
